--- a/DatingApplication/Client/Pages/Index.razor
+++ b/DatingApplication/Client/Pages/Index.razor
@@ -2,8 +2,6 @@
 
 <PageTitle>Faithful Matches</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hey there!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+Welcome to Faithful Matches
